Remove bound static state.
The manner in which different Bounds instances were managed was based on
some static state within the BoundsFactory class. This class has been
removed and all static state related to Bounds instances is no longer
available.

All Numeric Types have been altered to expect the required Bounds
instances. The alteration means that Dependency Injection is used to
correctly instantiate the required Numeric types.

The Bounds object is now also fully immutable to ensure that it is
both thread safe and unmodifiable.

Signed-off-by: Gary Pampara <gpampara@gmail.com>